Добавляю новую стартовую страницу

--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -1718,3 +1718,20 @@ body
 
 .tyure
 	width 80%
+
+
+
+
+
+
+// ------------------------------------------------------------------- //
+//																	   //
+//  							PAGE New 1								   //
+//																	   //
+// ------------------------------------------------------------------- //
+
+
+
+
+
+
