--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -1,19 +1,10 @@
 html 
   head
     include headCode
-    title Подбор растений для дома
+    title Стартовая страница 2
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js")
 
-    //script(src="js/bgTestIteration.js")    
-    //script(src="js/borderAnibate.js")
-    //script(src="js/sqlite-test.js")
-    //script(src="js/sqlite-test-bundle.js")
-    //script(src="js/mysql-test-bundle.js")
-    //script(src="js/bundle.js")    
-    //script(src="js/GetDBReq-Test.js")
-    //script(src="js/plant-cards.js")
-
-    script(src="js/mainTerminal.js")
+    //script(src="js/mainTerminal.js")
     
     header.header
       .bg-fone-header
@@ -23,247 +14,19 @@ html
       .head-bottom-line
 
   body 
-    .nav-menu-bar 
-      .decr-nav-menu
-        span Меню
-      .content-nav-menu
-        span.sp-4 Меню:
-        .nav-nav-menu
-          .butt-info.go-to-page-2
-            img(src="img/smile/Imf.png")
-            span.go-to-page-2 Информация о проекте и его создателях
-          .butt-all-pants.go-to-page-3
-            img(src="img/smile/Plant.png")
-            span.go-to-page-3 Все растения
-        .butt-develop-mode 
-          span Параметры разработчика
-          .swither-dev-mode
-            .circle-dev-mode
-        .butt-hide-menu
-          span Свернуть меню
-    
-    // Тут будут все элементы с вопросами
-    .main-body 
-      //p.main-counter 0
+    .n_but 
+      p Редактор знаний
+    .n_but 
+      p Решатель задач
+    .remark   
+      p База знаний отображается в Редакторе знаний. Там-же реализован функционал редактора знаний 
+      p Система ввода исходных данных, интегрирована в Решатель задач
+      p Система объяснения и вывода результата будет отображена, после того, как вользователь введёт необходимые входные данные, в Решателе задач
 
-      .descr-qu-1-grad
-        .descr-qu-1
-          p.pp1 Этот инструмент подберёт для вас <b>самое <i>лучшее</i> растение</b>
-          p Вам нужно будет ответить всего на <u><i>несколько</i></u> вопросов
-          p.pp3 Ну что, вы готовы <b>начинать?</b> 🚀
-          .butt-start
-            span Запустить 
-          
 
-      .block-qu#block-a
-        p.qu-answ Вы будете выращивать растения дома, или на улице?
-        p.letter-abbr a
-        .butt-bar
-          .butt-answ.answ-block-1.good-button
-            p Дома
-          .butt-answ.answ-block-2.gerat-button
-            p На улице
-
-      .block-qu#block-a-1
-        p.qu-answ Какая наименьшая температура бывает в вашем регионе?
-        p.letter-abbr a-1
-        .butt-bar
-          .butt-answ.answ-block-1.input-butt.good-button
-            p Введите, в ℃
-            input(type='text', placeholder='от -20 до 35', inputmode="numeric").my-input-1
-          .butt-answ.answ-block-2.gerat-button
-            p Не имеет значения, так как я планирую выращивать растения летом
-        p.err-inp-1 Нужно ввести число, от -20 до 35
-
-      .block-qu#block-a-2
-        p.qu-answ Какая средняя температура в вашем доме?
-        p.letter-abbr a-2
-        .butt-bar
-          .butt-answ.answ-block-1#block-a-2-butt.good-button
-            p.very-long-01 Введите, в ℃
-            input(type='text', placeholder='от 15 до 30', inputmode="numeric").my-input-2
-        p.err-inp-2 Нужно ввести число, от 15 до 30
-
-      .block-qu#block-a-2-1
-        p.qu-answ.tyure Какая примерная влажность в вашем доме?
-        .add-info.add-info-2
-          span i
-        p.letter-abbr a-2-1
-        .butt-bar
-          .butt-answ.answ-block-2-s.bad-batton
-            p Сухо
-          .butt-answ.answ-block-3-s.bad-batton
-            p Влажно
-          .butt-answ.answ-block-4-s.good-button
-            p Умеренная влажность
-          .butt-answ.answ-block-1-s.input-butt.gerat-button
-            p Введите (от 20 до 90)
-            input(type='text', inputmode="numeric").my-input-3
-        p.err-inp-3 Нужно ввести число, от 20 до 90
-
-      .block-qu#block-b
-        p.qu-answ Вы хотите подобрать одно растение, или сразу несколько?
-        p.letter-abbr b
-        .butt-bar
-          .butt-answ.answ-block-1.gerat-button
-            p Одно
-          .butt-answ.answ-block-2.good-button
-            p Несколько
-
-      .block-qu#block-c
-        p.qu-answ Вы хотите, что бы это растение было с цветами, или без?
-        p.letter-abbr c
-        .butt-bar
-          .butt-answ.answ-block-1.bad-batton
-            p Без цветов
-          .butt-answ.answ-block-2.gerat-button
-            p Не важно
-          .butt-answ.answ-block-3.good-button
-            p С цветами
-
-      .block-qu#block-c-3
-        p.qu-answ Выберете желаемый цвет - один или несколько:
-        p.letter-abbr c-3
-        .butt-bar-colors 
-          .color-green.color-s#green
-          .color-other
-            .color-s#red
-            .color-s#orange
-            .color-s#yellow
-            .color-s#light-blue
-            .color-s#blue
-            .color-s#violet
-            .color-s#pink
-            .color-s#silver
-            .color-s#multicolor
-        p.hhid Подсказка: Чем больше цветов вы выберете, тем больше будет результатов
-
-        //.butt-bar
-          .butt-answ.answ-block-1
-            p Выбор цветов [...]
-
-      .block-qu#block-d
-        p.qu-answ Вы хотите, что бы это растение было плодоносным?
-        p.letter-abbr d
-        .butt-bar
-          .butt-answ.answ-block-1.good-button
-            p Да
-          .butt-answ.answ-block-2.gerat-button
-            p Не важно
-          .butt-answ.answ-block-3.bad-batton
-            p Нет
-
-      .block-qu#block-e
-        p.qu-answ Вы будете ставить растения на окне?
-        p.letter-abbr e
-        .butt-bar
-          .butt-answ.answ-block-1.good-button
-            p Да
-          .butt-answ.answ-block-2.gerat-button
-            p Нет
-
-      .block-qu#block-e-1
-        p.qu-answ На ваше окно падает прямой солнечный свет?
-        p.letter-abbr e-1
-        .butt-bar
-          .butt-answ.answ-block-1.good-button
-            p Да
-          .butt-answ.answ-block-2.gerat-button
-            p Иногда
-          .butt-answ.answ-block-3.bad-batton
-            p Очень редко
-
-      .block-qu#block-f
-        p.qu-answ Для вас важно, что бы растение вырабатывало кислород?
-        p.letter-abbr f
-        .butt-bar
-          .butt-answ.answ-block-1.good-button
-            p Да, важно
-          .butt-answ.answ-block-2.gerat-button
-            p Было бы неплохо, но это не очень важно
-          .butt-answ.answ-block-3.bad-batton
-            p Мне без разницы на это
-
-      .block-qu#block-g
-        p.qu-answ Как много пространства под растения, в вашем доме?
-        p.letter-abbr g
-        .butt-bar
-          .butt-answ.answ-block-1.bad-batton
-            p Очень мало
-          .butt-answ.answ-block-2.gerat-button
-            p Средне
-          .butt-answ.answ-block-3.good-button
-            p Достаточно много
-
-      .block-qu#block-h
-        p.qu-answ Насколько вы хотите оставлять растения без присмотра?
-        .add-info 
-          span i
-        p.letter-abbr h
-        .butt-bar
-          .butt-answ.answ-block-1.bad-batton
-            p Ненадолго (на 3-5 дней)
-          .butt-answ.answ-block-2.gerat-button
-            p На 1-2 недели
-          .butt-answ.answ-block-3.good-button
-            p До месяца
-
-      .butt-final
-        span Подобрать растения
-
-      .loadd 
-        img(src="img/wave-load.gif")
-        span Подождите...
-
-      .reauest-2-only-color
-        span К сожалению, мы <i><b>не смогли</i> найти</b> растения с таким цветом, и характеристиками, что вы указали. 
-        span Но мы можем показать вам <b>все</b> растения с выбранными вами цветами, <i>вне зависимости</i> от их характеристик:
-
-      .result-cards   
-        .spsp
-          span Вот растения, которые подойдут вам лучше всего:
-        .upper-block-3 
-          .card
-            img(src="img/plant-image/P_01.png")
-            span Название растения
-          .card
-            img(src="img/plant-image/P_02.png")
-            span Название растения
-          .card
-            img(src="img/plant-image/P_03.png")
-            span Название растения
-        .down-block-4
-          .card
-            img(src="img/plant-image/P_04.png")
-            span Название растения
-          .card
-            img(src="img/plant-image/P_05.png")
-            span Название растения
-          .card
-            img(src="img/plant-image/P_06.png")
-            span Название растения
-          .card
-            img(src="img/plant-image/P_07.png")
-            span Название растения
-        p
-        .spsp.sp-23
-          span <i>Нажми на карточку, если хочешь узнать больше о растении</i>
-
-      .zero-reauest   
-        .spsp
-          span К сожалению, мы <i>не смогли</i> подобрать для вас растение. Попробуйте указать другие параметры
-
-      .block-request  
-        .req 
-          p Текст запроса: 
-        .answ 
-          p Ответ БД
-
-      .butt-final-2
-        span Пройти ещё раз
 
   footer 
     .version 
-      p У вас старая версия. Пожалуйста, очистите кеш браузера
+      p 2.0
     p 
-      a(href = 'page_2.html') Кто автор проекта?
+      a(href = 'page_2.html') О проекте
