Расставил кнопочки, добавил стили к ним

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -14,14 +14,16 @@ html
       .head-bottom-line
 
   body 
+    .add-1
     .n_but 
       p Редактор знаний
-    .n_but 
+    .n_but.n_but_2 
       p Решатель задач
     .remark   
-      p База знаний отображается в Редакторе знаний. Там-же реализован функционал редактора знаний 
-      p Система ввода исходных данных, интегрирована в Решатель задач
-      p Система объяснения и вывода результата будет отображена, после того, как вользователь введёт необходимые входные данные, в Решателе задач
+      p <b>Примечание:</b>
+      p <u>База знаний</u> отображается в <i>Редакторе знаний</i>. Там-же реализован функционал <u>редактора знаний</u> 
+      p <u>Система ввода исходных данных</u>, интегрирована в <i>Решатель задач</i>
+      p <u>Система объяснения и вывода результата</u> будет отображена, после того, как вользователь введёт необходимые входные данные, в <i>Решателе задач</i>
 
 
 
