--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -1730,8 +1730,42 @@ body
 //																	   //
 // ------------------------------------------------------------------- //
 
+.add-1
+	width: 1px
+	height 35px
 
+.n_but
+	width 70%
+	height 75px
+	border-radius: 14px
+	border 4px solid bg-blue
+	padding 20px
+	margin 15px
+	background-color: bg-blue
+	font-weight: bold 	// Жирный
+	//font-style: italic 	// Курсив
+	font-size 18px
+	p
+		text-align: center;
+		line-height: 5px
+		font-size: larger
+		
+.n_but:hover
+	//background-color: red	
+	border 3px solid black
 
+.n_but:active
+	filter: brightness(80%);
+
+.n_but_2
+	border 4px solid orange
+	background-color: orange
+
+.remark
+	margin-top 70px
+	width 70%
+	color rgb(151, 151, 151)
+	
 
 
 
