Сделал структуру из 3х связанных страничек

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -5,6 +5,7 @@ html
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js")
 
     //script(src="js/mainTerminal.js")
+    script(src="js/new/script_4.js")
     
     header.header
       .bg-fone-header
@@ -23,7 +24,7 @@ html
       p <b>Примечание:</b>
       p <u>База знаний</u> отображается в <i>Редакторе знаний</i>. Там-же реализован функционал <u>редактора знаний</u> 
       p <u>Система ввода исходных данных</u>, интегрирована в <i>Решатель задач</i>
-      p <u>Система объяснения и вывода результата</u> будет отображена, после того, как вользователь введёт необходимые входные данные, в <i>Решателе задач</i>
+      p <u>Система объяснения и вывода результата</u> будет отображена, после того, как пользователь введёт необходимые входные данные, в <i>Решателе задач</i>
 
 
 
