--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -1726,7 +1726,7 @@ body
 
 // ------------------------------------------------------------------- //
 //																	   //
-//  							PAGE New 1								   //
+//  							PAGE New 1							   //
 //																	   //
 // ------------------------------------------------------------------- //
 
@@ -1768,4 +1768,10 @@ body
 	
 
 
+// ----------------
 
+.butt_back
+	background-color gray
+	border 0px
+	p	
+		line-height: 9px
