7 - Сделал контейнер с прокручиваемыми блоками на странице редактора БЗ

--- a/app/pug/page_4_editor_learn.pug
+++ b/app/pug/page_4_editor_learn.pug
@@ -16,8 +16,21 @@ html
       .head-bottom-line
 
   body 
+    p.pg4-p1 Редактор базы знаний
+    .block-vew-pl-list
+      p Список всех записей о растениях:
+
+      .main-pl-list-cont-pg4
+        .el-pl-cont-4 блок 1
+        .el-pl-cont-4 блок 2
+        .el-pl-cont-4 блок 3
+        .el-pl-cont-4 блок 4
+        .el-pl-cont-4 блок 5
+
+    .h200
     .butt_back.n_but
       p Назад
+    p ! Прописать настройки для разных разрешений экранов
 
 
   footer 
