--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -37,6 +37,7 @@ bord() // Для отладки
 // Основные настройки:
 
 html
+	overflow-x: hidden
 	text-align: center
 	p
 		padding: 10px
@@ -1775,3 +1776,81 @@ body
 	border 0px
 	p	
 		line-height: 9px
+
+
+
+
+
+// ------------------------------------------------------------------- //
+//						 											   //
+//  			         PAGE New 4 Редактор БЗ		    	     	   //
+//																	   //
+// ------------------------------------------------------------------- //
+
+// Для широкого экрана - сделать его узким
+// Для мобильного - добавить предупреждение о неверном размере экрана
+
+.h200
+	height 2000px
+	//bord()
+	
+.pg4-p1
+	//color red
+	font-size: 31px
+	margin-top 15px
+
+.block-vew-pl-list
+	//bord()
+	height auto
+	width 90%
+	background-color: white
+	border-radius: 15px
+	padding 10px
+	p
+		text-align: center
+		font-size: 24px
+
+.main-pl-list-cont-pg4
+	//bord()
+	width 500px // Потом заменить на 100%, сделав в grid
+	height 200px
+	margin 15px
+	overflow-y: auto;
+	background-color: bg-blue
+	border-radius: 7px
+	direction: rtl;
+	border solid black 4px
+
+.el-pl-cont-4
+	//bord() 
+	//width 100%
+	margin 10px
+	height 50px
+	background white
+	padding 10px
+	border-radius: 8px
+
+.el-pl-cont-4:hover
+	background rgb(221, 221, 221) 
+	cursor: pointer;
+
+.el-pl-cont-4:active
+	background my-orange
+	//bg-yel = #ffd600
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
