--- a/app/pug/page_4_editor_learn.pug
+++ b/app/pug/page_4_editor_learn.pug
@@ -20,13 +20,23 @@ html
     .block-vew-pl-list
       p Список всех записей о растениях:
 
-      .main-pl-list-cont-pg4
-        .el-pl-cont-4 блок 1
-        .el-pl-cont-4 блок 2
-        .el-pl-cont-4 блок 3
-        .el-pl-cont-4 блок 4
-        .el-pl-cont-4 блок 5
-
+      .cont-4-1
+        .main-pl-list-cont-pg4
+          .el-pl-cont-4 блок 1
+          .el-pl-cont-4 блок 2
+          .el-pl-cont-4 блок 3
+          .el-pl-cont-4 блок 4
+          .el-pl-cont-4 блок 5
+        .right-container 
+          .butt-4-1 
+            span К первой записи
+          .butt-4-1 
+            span Следующая запись
+          .butt-4-1 
+            span Предыдущая запись
+          .butt-4-1 
+            span К последней записи
+      p.p-4-1 Выберете одно растение из списка, и вы сможете просмотреть все его характеристики, и отредактировать их.
     .h200
     .butt_back.n_but
       p Назад
