9 - Добавил кнопку + Добавить новую запись

--- a/app/pug/page_4_editor_learn.pug
+++ b/app/pug/page_4_editor_learn.pug
@@ -37,6 +37,8 @@ html
           .butt-4-1 
             span К последней записи
       p.p-4-1 Выберете одно растение из списка, и вы сможете просмотреть все его характеристики, и отредактировать их.
+    .block-vew-pl-list.p-4-2-add
+      p + Создать новую запись о растении
     .h200
     .butt_back.n_but
       p Назад
