--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -1833,6 +1833,8 @@ body
 .el-pl-cont-4:hover, .butt-4-1:hover
 	background rgb(221, 221, 221) 
 	cursor: pointer;
+	span	
+		cursor: pointer;
 
 .el-pl-cont-4:active
 	background my-orange
@@ -1869,6 +1871,26 @@ p.p-4-1
 	margin-bottom: 0px
 	color rgb(148, 148, 148)
 
+.p-4-2-add
+	margin 30px
+	padding 0px
+	background rgb(0, 255, 0)
+	p
+		margin 10px
+		font-size: 20px
+		//bord() 
+.p-4-2-add:hover
+	font-style: italic
+	cursor: pointer;
+	//border solid black 2px
+	background rgb(0, 221, 0)
+	p	
+		cursor: pointer;
+
+.p-4-2-add:active
+	//font-weight: bold
+	//cursor: pointer;
+	border solid black 4px
 
 
 
