--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -1833,7 +1833,7 @@ body
 .el-pl-cont-4:hover, .butt-4-1:hover
 	background rgb(221, 221, 221) 
 	cursor: pointer;
-	span	
+	span	 
 		cursor: pointer;
 
 .el-pl-cont-4:active
@@ -1893,6 +1893,38 @@ p.p-4-1
 	border solid black 4px
 
 
+
+.p-4-3-add
+	margin-top 31px
+	background #f7e300
+	p.aaa4
+		font-size: 18px
+		text-align: left
+		margin-left 30px
+
+.cont-dooble-4-3
+	display: grid
+	grid-template-columns: 1fr 1fr 50px
+	grid-gap: 10px 
+	//bord()
+	margin 10px
+	span
+		//bord()
+		font-size: 18px
+		text-align: left
+		align-self: center;
+		height 30px
+		margin-left 30px
+	.add-4-4
+		//color red
+		//bord()
+		color rgb(151, 151, 151)
+		text-align: center
+		margin 0px
+	input
+		height 30px
+		align-self: center
+		//margin-right 10px
 
 
 
