12 - Добавил поля для ввода ключевых признаков

--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -1790,6 +1790,14 @@ body
 // Для широкого экрана - сделать его узким
 // Для мобильного - добавить предупреждение о неверном размере экрана
 
+// @media (min-width: 1000px)
+// 	.pg-4
+// 		width 1000px
+// 		align-self: center;
+// 		display: flex;
+// 		justify-content: center;
+// 		//align-items: center;
+
 .h200
 	height 2000px
 	//bord()
@@ -1926,10 +1934,60 @@ p.p-4-1
 		align-self: center
 		//margin-right 10px
 
+.add-4-4-n
+	border solid 4px rgb(206, 206, 206)
+	background #e8e8e8
+	width 98%
+	border-radius: 12px
+	margin 15px auto
+	.n-4-4-1-n	
+		font-size: 24px
+	.div-n-4-4-2
+		display: grid
+		grid-template-columns: 1fr 1fr
+		margin-bottom 15px
 
+	table
+		bord()
+		margin 10px
+		margin: 0 auto;
+		text-align: center;
+	td, th
+		padding 5px
+	thead
+		//margin: 0 auto;
+		bord()
+	.nt-4-4-1
+		font-size: 17px
+		padding 0px
+		
+	.n-4-4-div-2
+		border rgb(0, 0, 0) solid 2px
+		border-radius: 9px
+		background rgb(107, 169, 255)
+		input
+			width 90%
+			margin 0px 20px
+		.butt-add-new-pr
+			width 90%
+			height 52px
+			background #75ff18
+			border-radius: 10px
+			p
+				font-size: 20px
+			margin 15px auto
+		.butt-add-new-pr:hover
+			border solid 2px rgb(44, 44, 44)
+			p	
+				font-style: italic
+		.butt-add-new-pr:active
+			background #2078fc
 
+.n-4-5-1
+	padding-bottom 3px
 
-
+.h20
+	height 50px
 
 
 
