--- a/app/pug/page_4_editor_learn.pug
+++ b/app/pug/page_4_editor_learn.pug
@@ -15,7 +15,7 @@ html
       
       .head-bottom-line
 
-  body 
+  body
     p.pg4-p1 Редактор базы знаний
     .block-vew-pl-list
       p Список всех записей о растениях:
@@ -122,7 +122,70 @@ html
 
     .block-vew-pl-list.p-4-2-add
       p + Создать новую запись о растении
-    .h200
+    
+    .block-vew-pl-list.n-4-5-1
+      p Ключевые признаки:
+      .block-vew-pl-list.add-4-4-n
+        p.n-4-4-1-n Аллелопатия:
+        .div-n-4-4-2 
+          table
+            thead
+              tr
+                th Заголовок
+            tbody
+              tr
+                td Элемент 1
+              tr
+                td Элемент 2
+              tr
+                td ЭлементЭлементЭлемент 3
+          .block-vew-pl-list.add-4-4-n.n-4-4-div-2
+            p.nt-4-4-1 Добавить новый признак:
+            input(type="text", placeholder="Введите название признака")
+            .butt-add-new-pr#allelop-butt-add
+              p Добавить
+      .block-vew-pl-list.add-4-4-n
+        p.n-4-4-1-n Тип климата:
+        .div-n-4-4-2 
+          table
+            thead
+              tr
+                th Заголовок
+            tbody
+              tr
+                td Элемент 1
+              tr
+                td Элемент 2
+              tr
+                td ЭлементЭлементЭлемент 3
+          .block-vew-pl-list.add-4-4-n.n-4-4-div-2
+            p.nt-4-4-1 Добавить новый признак:
+            input(type="text", placeholder="Введите название признака")
+            .butt-add-new-pr#allelop-butt-add
+              p Добавить
+      .block-vew-pl-list.add-4-4-n
+        p.n-4-4-1-n Цвет:
+        .div-n-4-4-2 
+          table
+            thead
+              tr
+                th Заголовок
+            tbody
+              tr
+                td Элемент 1
+              tr
+                td Элемент 2
+              tr
+                td ЭлементЭлементЭлемент 3
+          .block-vew-pl-list.add-4-4-n.n-4-4-div-2
+            p.nt-4-4-1 Добавить новый признак:
+            input(type="text", placeholder="Введите название признака")
+            .butt-add-new-pr#allelop-butt-add
+              p Добавить
+
+
+    //.h200
+    .h20
     .butt_back.n_but
       p Назад
     p ! Прописать настройки для разных разрешений экранов
