13 - Добавил кнопочки закрытия формы ввода характеристик

--- a/app/pug/page_4_editor_learn.pug
+++ b/app/pug/page_4_editor_learn.pug
@@ -119,6 +119,13 @@ html
           option(value="yes", selected) Да
           option(value="no") Нет
         span.add-4-4 select
+      .butt-4-close#b-4-not-edit
+        p Свернуть
+      .butt-compl-4
+        .butt-4-close#b-4-witch-save
+          p Сохранить изменения 
+        .butt-4-close#b-4-witch-not-save
+          p Закрыть без изменений
 
     .block-vew-pl-list.p-4-2-add
       p + Создать новую запись о растении
