--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -1989,9 +1989,40 @@ p.p-4-1
 .h20
 	height 50px
 
+.butt-compl-4
+	display: grid
+	grid-template-columns: 1fr 1fr
+
+.butt-4-close
+	width 90%
+	height 60px
+	background rgb(187, 187, 187)
+	margin 10px auto
+	margin-top 20px
+	border-radius: 10px
+	border black 2px solid
+	p
+		font-size: 22px
+
+#b-4-not-edit
+	background #e4e4e4
+	//display none
+
+#b-4-witch-save
+	background #11ff00
+
+#b-4-witch-not-save
+	background #f16800
 
 
+.butt-4-close:hover
+	font-style: italic
+	cursor: pointer;
+	//border solid black 2px
+	p	
+		cursor: pointer;
 
-
-
-
+.butt-4-close:active
+	//font-weight: bold
+	//cursor: pointer;
+	border solid black 4px
