--- a/app/pug/page_4_editor_learn.pug
+++ b/app/pug/page_4_editor_learn.pug
@@ -130,15 +130,16 @@ html
     .block-vew-pl-list.p-4-2-add
       p + Создать новую запись о растении
     
+    .h21
     .block-vew-pl-list.n-4-5-1
       p Ключевые признаки:
-      .block-vew-pl-list.add-4-4-n
+      .add-4-4-n
         p.n-4-4-1-n Аллелопатия:
         .div-n-4-4-2 
-          table
+          table#a12
             thead
               tr
-                th Заголовок
+                th Аллелопатия
             tbody
               tr
                 td Элемент 1
@@ -146,18 +147,18 @@ html
                 td Элемент 2
               tr
                 td ЭлементЭлементЭлемент 3
-          .block-vew-pl-list.add-4-4-n.n-4-4-div-2
+          .n-4-4-div-2#allelop
             p.nt-4-4-1 Добавить новый признак:
             input(type="text", placeholder="Введите название признака")
             .butt-add-new-pr#allelop-butt-add
               p Добавить
-      .block-vew-pl-list.add-4-4-n
+      .add-4-4-n
         p.n-4-4-1-n Тип климата:
         .div-n-4-4-2 
-          table
+          table#a12
             thead
               tr
-                th Заголовок
+                th Тип климата
             tbody
               tr
                 td Элемент 1
@@ -165,29 +166,39 @@ html
                 td Элемент 2
               tr
                 td ЭлементЭлементЭлемент 3
-          .block-vew-pl-list.add-4-4-n.n-4-4-div-2
+          .n-4-4-div-2#cl-type
             p.nt-4-4-1 Добавить новый признак:
             input(type="text", placeholder="Введите название признака")
-            .butt-add-new-pr#allelop-butt-add
+            .butt-add-new-pr.cl-type
               p Добавить
-      .block-vew-pl-list.add-4-4-n
-        p.n-4-4-1-n Цвет:
+      .add-4-4-n
+        p.n-4-4-1-n Цвет: 
         .div-n-4-4-2 
           table
             thead
               tr
-                th Заголовок
+                th Цвет
             tbody
               tr
                 td Элемент 1
               tr
                 td Элемент 2
               tr
+                td Элемент 2
+              tr
+                td Элемент 2
+              tr
+                td Элемент 2
+              tr
+                td Элемент 2
+              tr
+                td Элемент 2
+              tr
                 td ЭлементЭлементЭлемент 3
-          .block-vew-pl-list.add-4-4-n.n-4-4-div-2
+          .n-4-4-div-2
             p.nt-4-4-1 Добавить новый признак:
             input(type="text", placeholder="Введите название признака")
-            .butt-add-new-pr#allelop-butt-add
+            .butt-add-new-pr#allelop-butt-add-1
               p Добавить
 
 
@@ -195,7 +206,6 @@ html
     .h20
     .butt_back.n_but
       p Назад
-    p ! Прописать настройки для разных разрешений экранов
 
 
   footer 
