15 - Закончил вёрстку страницы редактора БЗ

--- a/app/pug/page_4_editor_learn.pug
+++ b/app/pug/page_4_editor_learn.pug
@@ -15,7 +15,7 @@ html
       
       .head-bottom-line
 
-  body
+  body.pg-4
     p.pg4-p1 Редактор базы знаний
     .block-vew-pl-list
       p Список всех записей о растениях:
