--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -2058,3 +2058,10 @@ p.p-4-1
 @media (min-width: 1055px) 
 	.block-vew-pl-list
 		width: 950px
+
+body.pg-4
+	min-width: 950px
+
+@media (max-width: 950px) 
+	html
+		overflow-x: visible
