16 - Сделал одну полоску значений на 5й странице

--- a/app/pug/page_5_todo_task.pug
+++ b/app/pug/page_5_todo_task.pug
@@ -14,7 +14,22 @@ html
       
       .head-bottom-line
 
-  body 
+  body.pg-5
+    p.pg4-p1 Решатель задач
+    .pg5-block-vew-pl-list
+      p Выберете и задайте значения, для одной или нескольких характерисик, и решатель подберёт набор растений на их основе:
+      .pg5-div-triple-rows
+        span Освещение
+        .pg5-input-cont
+          input(type="range" min="1" max="10" value="5")
+          .pg5-input-hints
+            span.pg5-lvl2-input-left-hint 1
+            span.pg5-lvl2-input-right-hint 10
+        .pg5-block
+          span Reset
+
+
+    .h200
     .butt_back.n_but
       p Назад
 
