17 - Сделал range для всех, что нужны были

--- a/app/pug/page_5_todo_task.pug
+++ b/app/pug/page_5_todo_task.pug
@@ -27,6 +27,61 @@ html
             span.pg5-lvl2-input-right-hint 10
         .pg5-block
           span Reset
+      p.pg5-p-sep ...
+      .pg5-div-triple-rows
+        span Относительная влажность
+        .pg5-input-cont
+          input(type="range" min="1" max="10" value="5")
+          .pg5-input-hints
+            span.pg5-lvl2-input-left-hint 10%
+            span.pg5-lvl2-input-right-hint 90%
+        .pg5-block
+          span Reset
+      .pg5-div-triple-rows
+        span Температура
+        .pg5-input-cont
+          input(type="range" min="1" max="10" value="5")
+          .pg5-input-hints
+            span.pg5-lvl2-input-left-hint -20 ℃
+            span.pg5-lvl2-input-right-hint 35 ℃
+        .pg5-block
+          span Reset
+      p.pg5-p-sep ...
+      p.pg5-p-sep ...
+      .pg5-div-triple-rows
+        span Выработка кислорода
+        .pg5-input-cont
+          input(type="range" min="1" max="10" value="5")
+          .pg5-input-hints
+            span.pg5-lvl2-input-left-hint [1
+            span.pg5-lvl2-input-right-hint 10]
+        .pg5-block
+          span Reset
+      .pg5-div-triple-rows
+        span Занимаемая площадь
+        .pg5-input-cont
+          input(type="range" min="1" max="10" value="5") 
+          //, style="background-color: #ff0000;")
+          .pg5-input-hints
+            span.pg5-lvl2-input-left-hint [1
+            span.pg5-lvl2-input-right-hint 10]
+        .pg5-block
+          span Reset
+      .pg5-div-triple-rows
+        span Уход за растением 
+        span.pg5-lvl2-line-down-2 (кол-во дней)
+        .pg5-input-cont
+          input(type="range" min="1" max="10" value="5")
+          .pg5-input-hints
+            span.pg5-lvl2-input-left-hint [1
+            span.pg5-lvl2-input-right-hint 10]
+        .pg5-block
+          span Reset
+      p.pg5-p-sep ...
+      p.pg5-p-sep ...
+      p.pg5-p-sep ...
+      p.pg5-p-sep ...
+      
 
 
     .h200
