--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -2087,13 +2087,23 @@ body.pg-4, body.pg-5
 
 .pg5-div-triple-rows
 	display: grid
-	grid-template-columns: 1fr 2fr 120px
+	grid-template-columns: 1.2fr 2fr 120px
 	position: relative
-	input
+	margin 20px 0px
+	margin-top -7px
+	input[type="range"]
 		margin-right 10px
+		//opacity: 0.5  		/// !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+	input[type="range"]:focus
+		//pointer-events: auto
+		opacity: 1
 	span
 		//bord()
 		margin-top 10px
+	span.pg5-lvl2-line-down-2
+		grid-row: none
+		position: absolute;
+		bottom: -20px;
 
 .pg5-block
 	//bord()
@@ -2127,6 +2137,28 @@ body.pg-4, body.pg-5
 			margin-right 10px
 		.pg5-lvl2-input-left-hint
 			float: left
+			
+// input[type="range"]::-webkit-slider-thumb
+// 	background-color: #a55050
+
+// input[type="range"]::-moz-range-thumb
+// 	background-color: #604706
+
+// .pg5-input-cont input[type="range"] {
+// 	/* Цвет линии */
+// 	//-webkit-appearance: none;
+// 	background-color: #000000;
+// 	height: 10px;
+// 	border-radius: 5px;	
+// 	/* Цвет кружка */
+// 	::-webkit-slider-thumb {
+// 		-webkit-appearance: none;
+// 		background-color: #ff8c00;
+// 		width: 20px;
+// 		height: 20px;
+// 		border-radius: 50%;
+// 	}
+// }
 
 
 
