--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -2118,6 +2118,15 @@ body.pg-4, body.pg-5
 		display: inline-block
 		font-size: 16px
 
+.pg5-block:hover
+	cursor: pointer;
+
+.pg5-block	
+	span:hover
+		cursor: pointer;
+
+.pg5-block:active
+	border solid black 2px
 
 
 .pg5-input-cont
@@ -2138,35 +2147,6 @@ body.pg-4, body.pg-5
 		.pg5-lvl2-input-left-hint
 			float: left
 			
-// input[type="range"]::-webkit-slider-thumb
-// 	background-color: #a55050
-
-// input[type="range"]::-moz-range-thumb
-// 	background-color: #604706
-
-// .pg5-input-cont input[type="range"] {
-// 	/* Цвет линии */
-// 	//-webkit-appearance: none;
-// 	background-color: #000000;
-// 	height: 10px;
-// 	border-radius: 5px;	
-// 	/* Цвет кружка */
-// 	::-webkit-slider-thumb {
-// 		-webkit-appearance: none;
-// 		background-color: #ff8c00;
-// 		width: 20px;
-// 		height: 20px;
-// 		border-radius: 50%;
-// 	}
-// }
-
-
-
-
-
-
-
-
 
 
 
