19 - Сделал одну выборку из трёх кнопок

--- a/app/pug/page_5_todo_task.pug
+++ b/app/pug/page_5_todo_task.pug
@@ -27,7 +27,20 @@ html
             span.pg5-lvl2-input-right-hint 10
         .pg5-block
           span Reset
-      p.pg5-p-sep ...
+      .pg5-div-triple-rows
+        span Переносимость прямого света
+        .pg5-input-cont.pg5-input-cont-pointers
+          .input-point-container
+            input(type="radio" name="input-point" id="1" checked)
+            span Да
+          .input-point-container
+            input(type="radio" name="input-point" id="2")
+            span Средне
+          .input-point-container
+            input(type="radio" name="input-point" id="3")
+            span Нет
+        .pg5-block
+          span Reset
       .pg5-div-triple-rows
         span Относительная влажность
         .pg5-input-cont
