--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -2107,11 +2107,12 @@ body.pg-4, body.pg-5
 
 .pg5-block
 	//bord()
-	margin 4px 10px
+	margin auto 10px
 	//border solid black 1px
 	border-radius: 7px
 	background #ffae0d
 	text-align: center
+	height 37px
 	span
 		margin 0px
 		margin-top 1px
@@ -2148,15 +2149,27 @@ body.pg-4, body.pg-5
 			float: left
 			
 
+.pg5-input-cont-pointers
+	//bord()
+	display: grid
+	grid-template-columns: 1fr 1fr 1fr
+	align-items: center;
+	.input-point-container
+		//bord()
+		margin 0px 10px
+		padding 10px
+		background #ececec
+		border-radius: 7px
 
+.input-point-container:hover
+	cursor: pointer;
 
+.input-point-container
+	span:hover
+		cursor: pointer;
 
-
-
-
-
-
-
+.input-point-container:active
+	background #dbdbdb
 
 
 
