--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -2161,6 +2161,9 @@ body.pg-4, body.pg-5
 		background #ececec
 		border-radius: 7px
 
+.pg5-cont-2
+	grid-template-columns: 1fr 1fr
+
 .input-point-container:hover
 	cursor: pointer;
 
@@ -2171,6 +2174,15 @@ body.pg-4, body.pg-5
 .input-point-container:active
 	background #dbdbdb
 
+.pg5-select-cont
+	//bord()
+	display: flex;
+	//justify-content: center;
+	align-items: center;
+	select
+		//bord()
+		height 30px
+		width 98%
 
 
 
