21 - Сделал список с чек-боксами

--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -2127,7 +2127,8 @@ body.pg-4, body.pg-5
 		cursor: pointer;
 
 .pg5-block:active
-	border solid black 2px
+	//border solid black 2px
+	filter: brightness(80%);
 
 
 .pg5-input-cont
@@ -2184,7 +2185,18 @@ body.pg-4, body.pg-5
 		height 30px
 		width 98%
 
-
+.pg5-checkbox-cont
+	//bord()
+	overflow-y: auto;
+	height 100px
+	padding 10px
+	padding-left 15px
+	border-radius: 4px
+	background #ececec
+	margin 0px 5px
+	margin-left 0px
+	margin-right 10px
+	
 
 
 
