--- a/app/pug/page_5_todo_task.pug
+++ b/app/pug/page_5_todo_task.pug
@@ -112,12 +112,25 @@ html
           span Reset
       .pg5-div-triple-rows
         span Цвет растения 
-        .pg5-select-cont
-          select#select-color
-            option(value="1") Зелёный
-            option(value="2") Красный
-            option(value="3") Синий
-            option(value="4") ...
+        //- .pg5-select-cont
+        //-   select#select-color
+        //-     option(value="1") Зелёный
+        //-     option(value="2") Красный
+        //-     option(value="3") Синий
+        //-     option(value="4") ...
+        .pg5-checkbox-cont
+          .input-checkbox-container
+            input(type="checkbox" id="green" value="1")
+            label(for="green") Зелёный
+          .input-checkbox-container
+            input(type="checkbox" id="red" value="2")
+            label(for="red") Красный
+          .input-checkbox-container
+            input(type="checkbox" id="blue" value="3")
+            label(for="blue") Синий
+          .input-checkbox-container
+            input(type="checkbox" id="other" value="4")
+            label(for="other") ...
         .pg5-block
           span Reset
       .pg5-div-triple-rows
