23 - Добавил кнопку подбора и подпись

--- a/app/pug/page_5_todo_task.pug
+++ b/app/pug/page_5_todo_task.pug
@@ -152,7 +152,9 @@ html
             span Нет
         .pg5-block
           span Reset
-      
+      .pg5-start-button
+        span Подобрать
+      p.pg5-add-p-1 Выберете значение хотя бы в одном поле
 
 
     .h200
