--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -2211,12 +2211,29 @@ body.pg-4, body.pg-5
 .pg5-group-sep
 	height 0px
 
+.pg5-start-button
+	height 60px
+	width 80%
+	background #00a2ff
+	border-radius: 10px
+	margin 15px auto
+	margin-top 40px
+	display: grid
+	justify-items: center;
+	align-items: center;
+	span
+		font-size 22px
 
+.pg5-start-button:hover
+	filter: brightness(115%);
+	cursor: pointer;
 
+.pg5-start-button:active
+	filter: brightness(90%);
 
-
-
-
+.pg5-add-p-1
+	text-align: center
+	margin-bottom 0px
 
 
 
