24 - Верстаю карточки для отображения результатов

--- a/app/pug/page_5_todo_task.pug
+++ b/app/pug/page_5_todo_task.pug
@@ -155,7 +155,22 @@ html
       .pg5-start-button
         span Подобрать
       p.pg5-add-p-1 Выберете значение хотя бы в одном поле
-
+    .pg5-block-vew-pl-list.pg5-block-2
+      p.pg5-p1 Вот такие растения мы подобрали для вас:
+      .pg5-lvl2-cont-1
+        .pg5-lvl2-block
+          .pg5-lvl3-block1
+            p <b>Тип климата:</b>
+            p.ital Субтропический
+          .pg5-lvl3-block2
+            .pg5-lvl4-block1-img
+              img(src="img/all-plants-photo/Растение Агапантус.jpg")
+            p Агапантус Агапантус АгапантусАгапантусАгапантус
+          .pg5-lvl3-block3
+            p <b>Аллелопатия:</b>
+            p.ital Нейтральная
+        .pg5-lvl2-block
+        .pg5-lvl2-block
 
     .h200
     .butt_back.n_but
