--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -2235,6 +2235,71 @@ body.pg-4, body.pg-5
 	text-align: center
 	margin-bottom 0px
 
+.pg5-block-2
+	margin-top 30px
+	.pg5-p1
+		text-align: center
+		font-size: 24px
+
+.pg5-lvl2-cont-1
+	display: grid
+	grid-template-columns: 1fr 1fr 1fr
+	justify-items: center;
+	align-items: center;
+	padding 20px
+
+.pg5-lvl2-block
+	width 90%
+	height 360px
+	//background black
+	border-radius: 15px
+	border solid black 2px
+	display: grid
+	grid-template-rows: 80px auto 80px
+
+.pg5-lvl3-block1, .pg5-lvl3-block2, .pg5-lvl3-block3
+	margin 10px
+	border-radius: 10px
+
+.pg5-lvl3-block1, .pg5-lvl3-block3
+	padding 5.5px
+	p
+		font-size: 16px
+		margin 0px
+		padding 0px
+		text-align: center
+
+p.ital
+	//font-style: italic
+
+.pg5-lvl3-block1
+	background #ffdd00
+
+.pg5-lvl3-block2
+	background #e5e5e5
+	margin 0px 10px
+	border 3px solid rgb(175, 175, 175)
+	.pg5-lvl4-block1-img
+		img
+			width 90%
+			height 130px
+			margin 10px auto
+			//border-radius: 12px
+			//background-image: url("img/Растение Кипарис.jpg")
+			display: block
+			//border-radius: 0px		
+			
+
+
+.pg5-lvl3-block3
+	background #53ee00
+
+
+
+
+
+
+
 
 
 
