--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -2250,7 +2250,7 @@ body.pg-4, body.pg-5
 
 .pg5-lvl2-block
 	width 90%
-	height 360px
+	height 370px
 	//background black
 	border-radius: 15px
 	border solid black 2px
@@ -2260,6 +2260,8 @@ body.pg-4, body.pg-5
 .pg5-lvl3-block1, .pg5-lvl3-block2, .pg5-lvl3-block3
 	margin 10px
 	border-radius: 10px
+	width 215px
+	overflow: hidden
 
 .pg5-lvl3-block1, .pg5-lvl3-block3
 	padding 5.5px
@@ -2279,6 +2281,17 @@ p.ital
 	background #e5e5e5
 	margin 0px 10px
 	border 3px solid rgb(175, 175, 175)
+	.pg5-lvl4-name-pl
+		margin 0px
+		padding 0px
+		margin-top -10px
+		//height 50px
+		text-align: center;
+		align-self: center;
+		//bord()
+		//padding: 0 auto;
+		//vertical-align: middle;
+		line-height: 22px
 	.pg5-lvl4-block1-img
 		img
 			width 90%
@@ -2289,10 +2302,25 @@ p.ital
 			display: block
 			//border-radius: 0px		
 			
+.pg5-lvl44-name-pl-2
+	display: grid;
+	justify-items: center;
+	align-items: center;
+	//bord()
+	height 50px
+	margin-top 0px
 
 
 .pg5-lvl3-block3
 	background #53ee00
+
+
+
+
+
+
+
+
 
 
 
