--- a/app/pug/page_5_todo_task.pug
+++ b/app/pug/page_5_todo_task.pug
@@ -158,6 +158,9 @@ html
     .pg5-block-vew-pl-list.pg5-block-2
       p.pg5-p1 Вот такие растения мы подобрали для вас:
       .pg5-lvl2-cont-1
+
+
+
         .pg5-lvl2-block
           .pg5-lvl3-block1
             p <b>Тип климата:</b>
@@ -165,11 +168,23 @@ html
           .pg5-lvl3-block2
             .pg5-lvl4-block1-img
               img(src="img/all-plants-photo/Растение Агапантус.jpg")
-            p Агапантус Агапантус АгапантусАгапантусАгапантус
+            .pg5-lvl44-name-pl-2
+              p.pg5-lvl4-name-pl Кофейное дерево (кофе)
           .pg5-lvl3-block3
             p <b>Аллелопатия:</b>
             p.ital Нейтральная
         .pg5-lvl2-block
+          .pg5-lvl3-block1
+            p <b>Тип климата:</b>
+            p.ital Субтропический
+          .pg5-lvl3-block2
+            .pg5-lvl4-block1-img
+              img(src="img/all-plants-photo/Растение Агапантус.jpg")
+            .pg5-lvl44-name-pl-2
+              p.pg5-lvl4-name-pl Лаванда
+          .pg5-lvl3-block3
+            p <b>Аллелопатия:</b>
+            p.ital Нейтральная
         .pg5-lvl2-block
 
     .h200
