26 - Сверстал 3 карточки результатов

--- a/app/pug/page_5_todo_task.pug
+++ b/app/pug/page_5_todo_task.pug
@@ -186,6 +186,30 @@ html
             p <b>Аллелопатия:</b>
             p.ital Нейтральная
         .pg5-lvl2-block
+          .pg5-lvl3-block1
+            p <b>Тип климата:</b>
+            p.ital Субтропический
+          .pg5-lvl3-block2
+            .pg5-lvl4-block1-img
+              img(src="img/all-plants-photo/Растение Агапантус.jpg")
+            .pg5-lvl44-name-pl-2
+              p.pg5-lvl4-name-pl Лаванда
+          .pg5-lvl3-block3
+            p <b>Аллелопатия:</b>
+            p.ital Нейтральная
+      .pg5-fack-block
+        .pg5-req-butt
+          p Почему это растение попало в набор?
+        .pg5-req-butt
+          p Почему это растение попало в набор?          
+        .pg5-req-butt
+          p Почему это растение попало в набор?
+      .pg5-p4-block
+        p В данном наборе <b>все</b> растения удовлетворяют критериям совместимости, а именно - один тип климата, и положительная либо нейтральная аллелопатия.
+        p Для того, что бы узнать, согласно каким именно характеристикам, в набор было помещено конкретное растение - <u>нажмите на кнопку пояснения</u>, ниже карточки растения.
+      .pg5-start-button.pg5-start-button-2
+        span Пройти ещё раз
+
 
     .h200
     .butt_back.n_but
