27 - Добавил сообщение об отрицательном результате

--- a/app/pug/page_5_todo_task.pug
+++ b/app/pug/page_5_todo_task.pug
@@ -209,7 +209,13 @@ html
         p Для того, что бы узнать, согласно каким именно характеристикам, в набор было помещено конкретное растение - <u>нажмите на кнопку пояснения</u>, ниже карточки растения.
       .pg5-start-button.pg5-start-button-2
         span Пройти ещё раз
-
+    .pg5-block-vew-pl-list.pg5-block-2.pg5-block-3
+      p.pg5-p1 Результаты:
+      p К сожалению, мы не смогли подобрать для вас набор растений, по указанным вами характеристикам.
+      p Пожалуйста, попробуйте ещё раз - выберете другие характеристики.
+      p.gr Если это сообщение появляется слишком часто, укажите значения для 1-2 характеристик, не больше. И помните, чем больше цветов растения вы выберете - тем больше будет результатов.
+      .pg5-start-button.pg5-start-button-2
+        span Попробовать ещё раз
 
     .h200
     .butt_back.n_but
