--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -2364,11 +2364,16 @@ p.ital
 	margin-top 0px
 
 
+.gr
+	color rgb(194, 194, 194)
 
 
-
-
-
+.pg5-block-3
+	p
+		width 90%
+		margin 10px auto
+	.gr
+		margin-bottom 30px
 
 
 
